--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           sudo apt install docker
           python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
+          python3 -m pip install molecule[ansible,docker,test,lint]
       - name: Test with molecule
         run: |
           molecule test --all
