--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,9 +4,9 @@
   tasks:
     - name: "Include ansible-role-guacamole-exporter"
       vars:
-        guacamole_endpoint: "https://guacamole.example.com"
-        guacamole_username: admin
-        guacamole_password: admin
-        guacamole_datasource: mysql
+        guacamole_exporter_endpoint: "https://guacamole.example.com"
+        guacamole_exporter_username: admin
+        guacamole_exporter_password: admin
+        guacamole_exporter_datasource: mysql
       include_role:
         name: "ansible-role-guacamole-exporter"
