--- a/molecule/latest/converge.yml
+++ b/molecule/latest/converge.yml
@@ -4,10 +4,10 @@
   tasks:
     - name: "Include ansible-role-guacamole-exporter"
       vars:
-        guacamole_endpoint: "https://guacamole.example.com"
-        guacamole_username: admin
-        guacamole_password: admin
-        guacamole_datasource: mysql
+        guacamole_exporter_endpoint: "https://guacamole.example.com"
+        guacamole_exporter_username: admin
+        guacamole_exporter_password: admin
+        guacamole_exporter_datasource: mysql
         guacamole_exporter_version: latest
       include_role:
         name: "ansible-role-guacamole-exporter"
